# Weather_graphing

./: .gitignore  README.md  ingest.py  main.py  plotly_vis.py  pyproject.toml  requirements.txt  streamlit_app.py  vis.ipynb
data/: rainfall.txt  sunshine.txt  tmax.txt  tmean.txt  tmin.txt
visuals/chart_data/: Max Temp.pkl  Mean Temp.pkl  Min Temp.pkl  Rainfall.pkl  Sunshine.pkl
visuals/html/: Max Temp.html  Mean Temp.html  Min Temp.html  Rainfall.html  Sunshine.html
